# av-mesh

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: ci.yml
dashboard/: Cargo.toml  Makefile  README.md  index.html
dashboard/src/: main.rs  style.css
deploy/k3d/: Dockerfile  av-mesh.yaml
reviews/: global-media-mesh-technical-review-2026-07-15.html
scripts/: bootstrap-linode-node.sh  k3d-smoke.sh  realtime-benchmark.sh  realtime-qualification.sh  realtime-soak.sh  two-region-smoke.sh  validate-observability.sh
src/: control.rs  edge_admission.rs  edge_lifecycle.rs  lib.rs  main.rs  relay_ingress.rs  replication.rs  subscribe_authorization.rs  synchronized_stem_subscribe.rs  talkback_lane.rs  telemetry_fec.rs  udp_fec.rs
tests/: subscribe_authorization.rs
tests/fixtures/: stem-stream-config.json
