[package]
name = "av-mesh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local AV cache mesh prototype with RaptorQ-FEC cache replication and HLS egress"
repository = "https://github.com/wavey-ai/av-mesh"
readme = "README.md"

[features]
default = []
media_capability_enforce_subscribe_v1 = []
private-subnet-discovery = ["dep:discovery"]
linode-provisioner = ["dep:linode"]
linode-private-discovery = ["private-subnet-discovery", "linode-provisioner"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.9"
clap = { version = "4.5", features = ["derive", "env"] }
discovery = { git = "https://github.com/wavey-ai/discovery.git", optional = true }
futures-util = "0.3"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-webtransport = "0.1.2"
http = "1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
linode = { git = "https://github.com/wavey-ai/linode.git", optional = true }
message-packetizer = { git = "https://github.com/wavey-ai/message-packetizer.git" }
media-object = { path = "../media-object" }
media-capability = { path = "../needletail/crates/media-capability" }
playlists = { path = "../playlists", features = ["mesh"] }
raptorq-datagram-fec = { path = "../raptor-fec/crates/raptorq-datagram-fec" }
raptorq-fec-transport = { path = "../raptor-fec/crates/raptorq-fec-transport" }
relay-session = { path = "../relay-session", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
synchronized-stems-media = { path = "../av-api/synchronized-stems-media" }
tcp-changes = { git = "https://github.com/wavey-ai/tcp-changes.git" }
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
talkback-media = { path = "../av-api/talkback-media" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
av-web-service = { path = "../av-service/av-web-service" }

[dev-dependencies]
base64 = "0.22"
ed25519-dalek = "2.2"
rcgen = "0.13"

[patch."https://github.com/wavey-ai/playlists.git"]
playlists = { path = "../playlists" }

[patch."https://github.com/wavey-ai/raptor-fec.git"]
raptorq-datagram-fec = { path = "../raptor-fec/crates/raptorq-datagram-fec" }
raptorq-fec-transport = { path = "../raptor-fec/crates/raptorq-fec-transport" }
