[package]
name = "av-mesh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local AV cache mesh prototype with RaptorQ-FEC cache replication and HLS egress"
repository = "https://github.com/wavey-ai/av-mesh"
readme = "README.md"

[features]
default = []
media_capability_enforce_subscribe_v1 = []
private-subnet-discovery = ["dep:discovery"]
linode-provisioner = ["dep:linode"]
linode-private-discovery = ["private-subnet-discovery", "linode-provisioner"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.9"
chrono = "0.4.44"
clap = { version = "4.5", features = ["derive", "env"] }
crc32fast = "1.4"
dashmap = "6.2"
discovery = { version = "0.1.5", optional = true }
futures-util = "0.3"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-webtransport = "0.1.2"
http = "1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
linode = { version = "0.0.2", optional = true }
message-packetizer = "0.1.0"
media-object = "0.1.1"
media-capability = "0.1.1"
playlists = { version = "0.1.6", features = ["mesh"] }
raptorq-datagram-fec = "0.1.6"
raptorq-fec-transport = "0.1.4"
relay-session = { version = "0.1.1", default-features = false }
rmp-serde = "1.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
synchronized-stems-media = "0.1.1"
tcp-changes = "0.1.0"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
talkback-media = "0.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
web-service = { package = "av-web-service", version = "0.1.0", features = ["h3-tokio-quiche"] }

[dev-dependencies]
base64 = "0.22"
ed25519-dalek = "2.2"
rcgen = "0.13"
