[package]
name = "av-mesh-dashboard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Leptos operator dashboard for av-mesh and av-contrib"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.7.0", features = ["json"] }
gloo-timers = "0.4.0"
js-sys = "0.3.99"
leptos = { version = "0.9.0-alpha", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
web-sys = { version = "0.3.99", features = ["Event", "EventSource", "EventTarget", "HtmlInputElement", "MessageEvent"] }
